# pnrt

./: .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  README.md
cmake/: pnrt-common.cmake
data/: BUILD
include/: BUILD  Tensor.h  ir.h
pnrt/: BUILD  CMakeLists.txt  Tensor.cc  ir-test.cc  ir.cc  logging.h  store-zip.cc  store-zip.h  tensor-test.cc
test/: BUILD  CMakeLists.txt  arma_test.cc
