module(
    name = "pnrt",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "glog", version = "0.7.1")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

# Armadillo (source, header-only mode)
http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "armadillo",
    build_file = "//third_party:armadillo.BUILD",
    sha256 = "bb03a16da6b2cca43962b65a2890faf4e6b16607220cf60270436a11e09e6f46",
    strip_prefix = "armadillo-15.2.4",
    url = "https://sourceforge.net/projects/arma/files/armadillo-15.2.4.tar.xz",
)


